--- a/xg-boost.ipynb
+++ b/xg-boost.ipynb
@@ -2832,7 +2832,7 @@
     "\n",
     "It also had the least amount of false negatives at 11 cases, and a false negative rate of 0.297.\n",
     "\n",
-    "In terms of fairness it had the lowest number of false negatives, the lowest demographic parity and the highest demographic parity ratio. "
+    "In terms of fairness it had the lowest FNR across the protected attribute, the lowest demographic parity and the highest demographic parity ratio. "
    ]
   },
   {
